Se agregan nuevos comandos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <li>git commit</li>
     </ul>
 
+    <h3>Comandos medios</h3>
+    <ul>
+        <li>git log</li>
+        <li>git checkout</li>
+        <li>git branch</li>
+        <li>git merge</li>
+    </ul>
+
 
 </body>
 </html>
