Se agregan nuevos comandos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <li>git branch</li>
         <li>git merge</li>
     </ul>
-
+    <h3>Comandos avanzados</h3>
+    <ul>
+        <li>git rebase</li>
+        <li>git stash</li>
+        <li>git cherry-pick</li>
+        <li>git reset</li>
+    </ul>
 
 </body>
 </html>
