--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li>git branch</li>
         <li>git merge</li>
     </ul>
+    <h3>Resolviendo problemas y no matematicos</h3>
+    <p>༼ つ ◕_◕ ༽つ</p>
 
 
 </body>
